added category selection

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="container">
         <div id="home" class="flex-center flex-column">
             <h1>Quiz App</h1>
-            <a class= "btn" href="/game.html">Play</a>
+            <a class= "btn" href="/categories.html">Choose Category</a>
             <a class= "btn" href="/highscores.html">High Scores</a>
         </div>
     </main>
